refactor: enable BOM spring